--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<b>Hello, Im Brody Nelson.</b> I'm a <b>Computer Science major</b> at the <b>University of Missouri</b>. I spend my day expanding my knowledge in Computer Science. 
 				</p>
 				<div class="intro-btns">
-					<a href="https://www.linkedin.com/in/brody-nelson-ab600027a/" class="btn-blue mx-1"><i class="fa fa-linkedin"></i> Linked In</a>
+					<a href="https://www.linkedin.com/in/brody-nelson-ab600027a/" class="btn-blue mx-1" target="_blank"><i class="fa fa-linkedin"></i> Linked In</a>
 					<a href="https://github.com/brodynelly" class="btn-blue-outline mx-1" id="projects-btn"
 					  target="_blank"><i class="fa fa-github"></i> Github</a>
 			</div>
