--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
 		<section id="about" class="section section-1">
 			<div class="container has-text-centered">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="assets/img/profile.png">
 			</div>
 			<div class="container"></br>
 				<p class="intro">
@@ -69,6 +68,31 @@
 
 				<div class="project-row">
 					<div class="project-left">
+						<img src="assets/img/TRANSLATE.png" alt="">
+					</div>
+					<div class="project-right"> 
+					
+						<h2><b>Article Translator</b></h2>
+
+						<div class="tech-stack-list">
+							<p><b>Made With:</b></p>
+							<li><span class="iconify" data-icon="devicon:react-wordmark" data-inline="false"></span></li>
+							<li><span class="iconify" data-icon="logos:javascript" data-inline="false"></span></li>
+							<li><span class="iconify" data-icon="skill-icons:html" data-inline="false"></span></li>
+							<li><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span></li>
+						</div>
+
+
+						<p>This website is a personal project to learn Spanish by reading and translating articles with Google Translate API. It showcases my skills in using React, HTML, CSS, Node.js and npm to build a user-friendly website. It supports priority-driven selection, copying, sharing and listening of the translated text. It proves that I can use Node.js and npm to create a reliable and flexible back-end that manages the website’s communication, which requires knowledge of JavaScript, modules, packages, and dependencies.</p>
+						<div class="intro-btns">
+							<a href="https://brodynelly.github.io/admin/dashboard" class="btn-dark mx-1" id="projects-btn"
+					  		target="_blank"><i class="fa fa-link"></i> Website</a>
+						</div>
+					</div>
+				</div>
+
+				<div class="project-row">
+					<div class="project-left">
 						<img src="assets/img/PQueue .png" alt="">
 					</div>
 					<div class="project-right"> 
@@ -83,7 +107,7 @@
 
 						<p>This project presents an advanced implementation of a Priority Queue in C, showcasing my skills in creating efficient, scalable data structures. It includes priority-based insertion, extraction, and dynamic resizing, emphasizing my ability in algorithmic optimization and memory management. This work highlights my proficiency in designing data structures that are fundamental to complex algorithmic solutions and system performance.</p>
 						<div class="intro-btns">
-							<a href="https://github.com/brodynelly" class="btn-dark mx-1" id="projects-btn"
+							<a href="https://github.com/brodynelly/data-structure-basics/tree/main/PQueue%20funct/lab" class="btn-dark mx-1" id="projects-btn"
 					  		target="_blank"><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
@@ -103,7 +127,7 @@
 
 						<p>This project features a robust implementation of a Binary Search Tree (BST) in C, highlighting my expertise in efficient data structures. It includes key functionalities like node insertion, deletion, and in-order traversal, demonstrating my proficiency in algorithm design and optimization. The project underscores my ability to handle complex data structures and balance performance with memory efficiency, crucial skills in software development and system design.</p>
 						<div class="intro-btns">
-							<a href="https://github.com/brodynelly" class="btn-dark mx-1" id="projects-btn"
+							<a href="https://github.com/brodynelly/data-structure-basics/tree/main/binary%20search%20(BST)" class="btn-dark mx-1" id="projects-btn"
 					  		target="_blank"><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
@@ -122,7 +146,7 @@
 
 						<p>In this project, I developed a range of advanced linked list operations in C, showcasing deep understanding of data structures. Key features include insertion, deletion, and traversal functions, each optimized for performance and memory usage. The project demonstrates my ability to implement core algorithms and manage pointers effectively, essential skills in system-level programming.
 							<div class="intro-btns">
-								<a href="https://github.com/brodynelly" class="btn-dark mx-1" id="projects-btn"
+								<a href="https://github.com/brodynelly/data-structure-basics/tree/main/Linked%20List%20Function" class="btn-dark mx-1" id="projects-btn"
 								  target="_blank"><i class="fa fa-github"></i> Github</a>
 							</div>
 					</p>
@@ -145,7 +169,7 @@
 						<p>This project showcases a suite of string utility functions in C, demonstrating proficiency in low-level programming and string manipulation. It includes dynamic string duplication, efficient concatenation, case-insensitive comparison, and robust tokenization. Emphasizing memory-safe operations, the toolkit highlights my ability to write secure, reliable, and efficient code, suitable for various applications.</p>
 						
 						<div class="intro-btns">
-							<a href="https://github.com/brodynelly" class="btn-dark mx-1" id="projects-btn"
+							<a href="https://github.com/brodynelly/data-structure-basics/tree/main/String%20Utility%20Functions" class="btn-dark mx-1" id="projects-btn"
 					  		target="_blank"><i class="fa fa-github"></i> Github</a>
 						</div>
 					</div>
