Updated project card
switched the image to be on the right hand side

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 				<div class="project-row">
 					<div class="project-left">
-						<img src="assets/img/TRANSLATE.png" alt="">
+						<img class="float:right" src="assets/img/TRANSLATE.png" alt="">
 					</div>
 					<div class="project-right"> 
 					
