updated website cards
updated cards for new elements

--- a/index.html
+++ b/index.html
@@ -52,11 +52,6 @@
 		<section id="about" class="section section-6" >
 			<div id="typedtext" style="color:rgb(111, 111, 104)" style="border: 2px solid #e5e7eb" ></div>
 			
-			
-			
-
-			
-			
 		</section>
 		
 		<!-- Projects -->
@@ -73,16 +68,20 @@
 
 						<div class="tech-stack-list">
 							<p><b>Made With:</b></p>
-							<li><span class="iconify" data-icon="devicon:react-wordmark" data-inline="false"></span></li>
+							<li><span class="iconify" data-icon="akar-icons:django-fill" data-inline="false"></span></li>
+							<li><span class="iconify" data-icon="skill-icons:docker" data-inline="false"></span></li>
 							<li><span class="iconify" data-icon="logos:javascript" data-inline="false"></span></li>
+							<li><span class="iconify" data-icon="devicon:bootstrap" data-inline="false"></span></li>
 							<li><span class="iconify" data-icon="skill-icons:html" data-inline="false"></span></li>
 							<li><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span></li>
 						</div>
-						<p>This website is a personal project to learn Spanish by reading and translating articles with Google Translate API. It showcases my skills in using React, HTML, CSS, Node.js and npm to build a user-friendly website. It supports priority-driven selection, copying, sharing and listening of the translated text. It proves that I can use Node.js and npm to create a reliable and flexible back-end that manages the website’s communication, which requires knowledge of JavaScript, modules, packages, and dependencies.</p>
-						<div class="link-btns">
-							<a href="https://brodynelly.github.io/translation-website/" class="btn-light mx-1" id="projects-btn"
-					  		target="_blank"><i class="fa fa-link"></i> Live</a>
+						<p>This Healthcare Management System is a project designed to streamline the management of patient records, appointments, and staff workflows. Built using Django, Docker, Bootstrap, and CSS, the system ensures a user-friendly interface and scalable backend. With Django, I can create secure and efficient web applications that manage sensitive patient data, while Docker allows for containerized deployment, ensuring smooth scalability and portability. The system supports essential functionalities such as patient registration, appointment scheduling, and user management, making it a reliable tool for healthcare providers. Bootstrap and CSS enhance the design, ensuring responsiveness and a seamless user experience across devices.</p>						<div class="link-btns">
+							<div class="link-btns">
+								<a href="https://github.com/brodynelly/iCAREProject-Public" class="btn-light mx-1" id="projects-btn"
+								  target="_blank"><i class="fa fa-github"></i> Github</a>
+							</div>
 						</div>
+
 					</div>
 					<div class="project-right">
 						<img src="assets/img/Icare.png" alt="" class="img">
@@ -101,10 +100,14 @@
 							<li><span class="iconify" data-icon="skill-icons:html" data-inline="false"></span></li>
 							<li><span class="iconify" data-icon="vscode-icons:file-type-css" data-inline="false"></span></li>
 						</div>
-						<p>This website is a personal project to learn Spanish by reading and translating articles with Google Translate API. It showcases my skills in using React, HTML, CSS, Node.js and npm to build a user-friendly website. It supports priority-driven selection, copying, sharing and listening of the translated text. It proves that I can use Node.js and npm to create a reliable and flexible back-end that manages the website’s communication, which requires knowledge of JavaScript, modules, packages, and dependencies.</p>
-						<div class="link-btns">
-							<a href="https://brodynelly.github.io/translation-website/" class="btn-light mx-1" id="projects-btn"
-					  		target="_blank"><i class="fa fa-link"></i> Live</a>
+						<p>This Journaling App is a personal project designed to help users maintain and organize their daily journal entries. Built using MongoDB, the app ensures efficient storage and retrieval of journal data in a flexible and scalable NoSQL database. The application allows users to create, edit, and delete journal entries while keeping their data secure. MongoDB's document-based model provides a straightforward way to manage complex and varied journal content. The app’s intuitive interface makes it easy for users to track their thoughts, emotions, and experiences over time, while ensuring that their data is easily accessible and well-organized.</p>						<div class="link-btns">
+							<div class="link-btns">
+							<a href="https://github.com/brodynelly/data-structure-basics/tree/main/PQueue%20funct/lab" class="btn-light mx-1" id="projects-btn"
+					  		target="_blank"><i class="fa fa-github"></i> Github</a>
+							  <a href="https://www.youtube.com/watch?v=3t3WoayoqH8&ab_channel=BrodyNelson" class="btn-light mx-1" id="projects-btn"
+					  		target="_blank"><i class="fa fa-youtube"></i> YouTube</a>
+							
+						</div>
 						</div>
 					</div>
 					<div class="project-right">
