--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						</div>
 						<p>This Journaling App is a personal project designed to help users maintain and organize their daily journal entries. Built using MongoDB, the app ensures efficient storage and retrieval of journal data in a flexible and scalable NoSQL database. The application allows users to create, edit, and delete journal entries while keeping their data secure. MongoDB's document-based model provides a straightforward way to manage complex and varied journal content. The app’s intuitive interface makes it easy for users to track their thoughts, emotions, and experiences over time, while ensuring that their data is easily accessible and well-organized.</p>						<div class="link-btns">
 							<div class="link-btns">
-							<a href="https://github.com/brodynelly/data-structure-basics/tree/main/PQueue%20funct/lab" class="btn-light mx-1" id="projects-btn"
+							<a href="https://github.com/brodynelly/journal" class="btn-light mx-1" id="projects-btn"
 					  		target="_blank"><i class="fa fa-github"></i> Github</a>
 							  <a href="https://www.youtube.com/watch?v=3t3WoayoqH8&ab_channel=BrodyNelson" class="btn-light mx-1" id="projects-btn"
 					  		target="_blank"><i class="fa fa-youtube"></i> YouTube</a>
